--- a/services/frontend/src/pages/SokoniTravelPackage.css
+++ b/services/frontend/src/pages/SokoniTravelPackage.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 273px;
   background-color: var(--color-gray-400);
-  width: 1647px;
+  width: 100vw;
   height: 100vh;
 }
 .annie-spratt-uk3t05ndsng-unspl-icon {
